<resources>
    <string name="app_name">AndroidPJ</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="refresh">Refresh</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="busy">Busy</string>
    <string name="ringing">Ringing</string>
    <string name="update">Update</string>
    <string name="re_invite">ReInvite</string>
    <string name="cancel">Cancel</string>
    <string name="end">End</string>
    <string name="counterpart">Counterpart</string>
    <string name="buddy">Buddy</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="mute_on">Mute On</string>
    <string name="mute_off">Mute Off</string>
    <string name="speaker_on">Speaker On</string>
    <string name="speaker_off">Speaker Off</string>

    <string name="default_notification_channel_id">Default</string>
    <string name="call_description">Call</string>
    <string name="message_description">Message</string>

    <string name="receive_notification">Receive Call</string>
    <string name="receive_notification_desc">Receive Call Notification Description</string>
    <string name="call_notification">Call</string>
    <string name="call_notification_desc">Call Notification Description</string>
    <string name="message_notification">Message</string>
    <string name="message_notification_desc">Received Message Notification Description</string>
    <string name="notice_notification">Notice</string>
    <string name="notice_notification_desc">Notice Notification Description</string>
    <string name="mute_notice_notification">Mute Notice</string>
    <string name="mute_notice_notification_desc">Mute Notification Description</string>
</resources>