<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_btns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#cccccc"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_unregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unregister"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#cccccc"
                    android:visibility="gone"
                    app:layout_constraintLeft_toRightOf="@id/tv_register"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#cccccc"
                    android:visibility="gone"
                    app:layout_constraintLeft_toRightOf="@id/tv_unregister"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_counterpart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_btns">

                <EditText
                    android:id="@+id/et_counterpart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingVertical="15dp"
                    android:inputType="text"
                    android:background="#ffffff"
                    android:hint="@string/counterpart"
                    android:layout_toStartOf="@+id/ll_iv_btns"
                    android:importantForAutofill="no" />

                <LinearLayout
                    android:id="@+id/ll_iv_btns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true">

                    <ImageView
                        android:id="@+id/iv_call"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:padding="15dp"
                        android:visibility="gone"
                        android:src="@drawable/round_call_24"
                        android:contentDescription="@string/call_description" />

                    <ImageView
                        android:id="@+id/iv_message"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:padding="15dp"
                        android:visibility="gone"
                        android:src="@drawable/round_chat_bubble_24"
                        android:contentDescription="@string/message_description" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/rl_counterpart">

                <TextView
                    android:id="@+id/tv_counterpart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:text="@string/counterpart"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_counterpart"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/tv_accept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accept"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:background="#cccccc"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_decline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decline"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:background="#cccccc"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_busy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/busy"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:background="#cccccc"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_ringing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ringing"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:background="#cccccc"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:background="#cccccc"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_re_invite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/re_invite"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:background="#cccccc"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="#000000"
                        android:padding="10dp"
                        android:background="#cccccc"
                        android:visibility="gone" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>